<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/min_padding"
    android:gravity="center_vertical"
    >
    <ImageView
        android:id="@+id/music_picture"
        android:layout_width="@dimen/picture_size_music"
        android:layout_height="@dimen/picture_size_music"
        android:layout_marginStart="@dimen/margin5"
        android:src="@drawable/img_1"/>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="@dimen/min_padding"
        android:paddingEnd="@dimen/min_padding"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name_music"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/name_music"
            android:textColor="@color/yp_color_text"
            android:fontFamily="@font/ys_display_regular"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/author_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/author_name_music"
                android:textColor="@color/author_name_color_music"
                android:fontFamily="@font/ys_display_regular"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/trackSeparator"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/trackSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="@dimen/author_name_music"
                android:textColor="@color/author_name_color_music"
                app:layout_constraintStart_toEndOf="@id/author_music"
                app:layout_constraintEnd_toStartOf="@id/time_music"
                app:layout_constraintBaseline_toBaselineOf="@id/author_music" />
            <TextView
                android:id="@+id/time_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/author_name_music"
                android:textColor="@color/author_name_color_music"
                android:fontFamily="@font/ys_display_regular"
                app:layout_constraintStart_toEndOf="@id/trackSeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/author_music" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_forward"
        android:padding="@dimen/min_padding"
        />

</LinearLayout>
