...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backdround_w_b"
    tools:context=".ui.media.favorite.FavoriteTracksFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteTracksList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favoriteTracksPlaceholderText"
        style="@style/MediaPlaceholderText"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/media_library_empty"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
