...
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.43"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/afterArrowSpace"
            app:srcCompat="@drawable/audio_player_placeholder" />
        <TextView
            android:id="@+id/musicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playerPicture"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            android:text="Yesterday (Remastered 2009)"
            android:layout_marginTop="@dimen/max_margin"
...
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/authorText"
            android:layout_marginTop="@dimen/margin38"
            />

        <ImageButton
            android:id="@+id/favouriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/favourite_button_inactive"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/authorText"
            android:layout_marginTop="@dimen/margin54"/>
...
